--- a/FoodyTekmerWebUI/Views/Category/Index.cshtml
+++ b/FoodyTekmerWebUI/Views/Category/Index.cshtml
@@ -22,8 +22,8 @@
             <tr>
                 <td>@item.CategoryId</td>
                 <td>@item.CategoryName</td>
-                <td><a href="/Category/DeleteCategory/@item.CategoryId" class="btn btn-danger"> Sil </a></td>>
-                <td><a href="/Category/UpdateCategory/@item.CategoryId" class="btn btn-success"> Güncelle </a></td>>
+                <td><a href="/Category/DeleteCategory/@item.CategoryId" class="btn btn-danger"> Sil </a></td>
+                <td><a href="/Category/UpdateCategory/@item.CategoryId" class="btn btn-success"> Güncelle </a></td>
             </tr>
         }
 </table>
