Silme işlemini yaptık ve link verdim vede admin paneli kapalı geliyordu onu açtım.

--- a/FoodyTekmerWebUI/Views/Product/Index.cshtml
+++ b/FoodyTekmerWebUI/Views/Product/Index.cshtml
@@ -5,36 +5,36 @@
 }
 
 <h2> Ürün Listesi </h2>
-    <table class="table table-bordered">
-        <tr>
-            <th>#</th>
-            <th>Ürün Adı</th>
-            <th>Ürün Fiyatı</th>
-            <th>Yeni Fiyat</th>
-            <th>Durum</th>
-            <th>Sil</th>
-            <th>Güncelle</th>
-        </tr>
-        <@foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.ProductId</td>
-                <td>@item.Name</td>
-                <td>@item.OldPrice</td>
-                <td>@item.NewPrice</td>
-                    <td>
-                        @if (item.Status)
-                {
-                    <span class="btn btn-success">aktif</span>
-                }
-                else
-                {
-                    <span class="btn btn-danger">pasif</span>
-                }
-                    </td>
-                <td><a href="#" class="btn btn-danger">Sil</a></td>
-                <td><a href="#" class="btn btn-success">Güncelle</a></td>
-            </tr>
-        }
-    </table>
-<a href="CreateProduct" class="btn btn-primary"> Yeni Ürün Girişi</a>
+<table class="table table-bordered">
+    <tr>
+        <th>#</th>
+        <th>Ürün Adı</th>
+        <th>Ürün Fiyatı</th>
+        <th>Yeni Fiyat</th>
+        <th>Durum</th>
+        <th>Sil</th>
+        <th>Güncelle</th>
+    </tr>
+    <@foreach (var item in Model)
+    {
+    <tr>
+        <td>@item.ProductId</td>
+        <td>@item.Name</td>
+        <td>@item.OldPrice</td>
+        <td>@item.NewPrice</td>
+        <td>
+            @if (item.Status)
+            {
+                        <span class="btn btn-success">aktif</span>
+            }
+            else
+            {
+                        <span class="btn btn-danger">pasif</span>
+            }
+        </td>
+        <td><a href="/Product/DeleteProduct/@item.ProductId" class="btn btn-danger">Sil</a></td>
+        <td><a href="/Product/UpdateProduct/@item.ProductId" class="btn btn-success">Güncelle</a></td>
+    </tr>
+    }
+</table>
+<a href="/Product/CreateProduct" class="btn btn-primary"> Yeni Ürün Girişi</a>
