--- a/FoodyTekmerWebUI/Views/Shared/AdminLayout.cshtml
+++ b/FoodyTekmerWebUI/Views/Shared/AdminLayout.cshtml
@@ -13,7 +13,7 @@
   <body>
 		
 		<div class="wrapper d-flex align-items-stretch">
-			<nav id="sidebar" class="active">
+			<nav id="sidebar" class="">
 				<div class="custom-menu">
 					<button type="button" id="sidebarCollapse" class="btn btn-primary">
 	          <i class="fa fa-bars"></i>
