Güncelleme ve silme işlemlerinden sonra son ufak değişiklikleri yaptık ve projemiz burada son buldu.

--- a/FoodyTekmerWebUI/Views/Product/Index.cshtml
+++ b/FoodyTekmerWebUI/Views/Product/Index.cshtml
@@ -15,7 +15,7 @@
         <th>Sil</th>
         <th>Güncelle</th>
     </tr>
-    <@foreach (var item in Model)
+    @foreach (var item in Model)
     {
     <tr>
         <td>@item.ProductId</td>
