--- a/FoodyTekmerWebUI/Views/Shared/AdminLayout.cshtml
+++ b/FoodyTekmerWebUI/Views/Shared/AdminLayout.cshtml
@@ -21,27 +21,27 @@
 	        </button>
         </div>
 				<div class="p-4">
-		  		<h1><a href="index.html" class="logo">Flash</a></h1>
+		  		<h1><a href="index.html" class="logo">Admin Paneli</a></h1>
 	        <ul class="list-unstyled components mb-5">
 	          <li class="active">
-	            <a href="#"><span class="fa fa-home mr-3"></span> Home</a>
+	            <a href="#"><span class="fa fa-home mr-3"></span> Anasayfa</a>
 	          </li>
 	          <li>
-	              <a href="#"><span class="fa fa-user mr-3"></span> About</a>
+	              <a href="#"><span class="fa fa-user mr-3"></span> Ürünler</a>
 	          </li>
 	          <li>
-              <a href="#"><span class="fa fa-briefcase mr-3"></span> Portfolio</a>
+              <a href="#"><span class="fa fa-briefcase mr-3"></span> Kategoriler</a>
 	          </li>
 	          <li>
-              <a href="#"><span class="fa fa-sticky-note mr-3"></span> Blog</a>
+              <a href="#"><span class="fa fa-sticky-note mr-3"></span> Ürünler</a>
 	          </li>
 	          <li>
-              <a href="#"><span class="fa fa-paper-plane mr-3"></span> Contact</a>
+              <a href="#"><span class="fa fa-paper-plane mr-3"></span> Yeni Ürün</a>
 	          </li>
 	        </ul>
 
 	        <div class="mb-5">
-						<h3 class="h6 mb-3">Subscribe for newsletter</h3>
+					<h3 class="h6 mb-3">Bültene abone olun</h3>
 						<form action="#" class="subscribe-form">
 	            <div class="form-group d-flex">
 	            	<div class="icon"><span class="icon-paper-plane"></span></div>
@@ -52,7 +52,7 @@
 
 	        <div class="footer">
 	        	<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
+						Telif Hakkı &copy;<script>document.write(new Date().getFullYear());</script> Tüm hakları saklıdır | Bu şablon <i class="icon-heart" aria-hidden="true"></i> by Mustafa Emre İLHAN tarafından hazırlanmıştır.
 						  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 	        </div>
 
