--- a/FoodyTekmerWebUI/Views/Default/PartialNavbar.cshtml
+++ b/FoodyTekmerWebUI/Views/Default/PartialNavbar.cshtml
@@ -38,7 +38,7 @@
                             <a href="404.html" class="dropdown-item">İndirimler</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Bize Yazın</a>
+                <a href="/Product/Index/" class="nav-item nav-link">Admin Paneli</a>
                 </div>
                 <div class="d-none d-lg-flex ms-2">
                     <a class="btn-sm-square bg-white rounded-circle ms-3" href="">
